--- a/app/views/backstage/frontpage_ads.html.erb
+++ b/app/views/backstage/frontpage_ads.html.erb
@@ -7,17 +7,8 @@
             <% if @current_ad_ids.empty? %>
                 No current frontpage ads set.
             <% else %>
-                <ul>
-                    <% @current_ad_ids.zip(@current_ads.each) do |id, ad| %>
-                        <li>
-                            <% if ad.nil? %>
-                                <%= id %>: Annonsen finnes ikke eller er ikke offentlig!
-                            <% else %>
-                                <%= id %>: <%= ad.title %>
-                            <% end %>
-                        </li>
-                    <% end %>
-                </ul>
+                <%= render partial: 'frontpage_ad_list',
+                           locals: { ids: @current_ad_ids, ads: @current_ads} %>
             <% end %>
 
             <hr>
@@ -31,22 +22,14 @@
             <% end %>
 
             <% unless @new_ads.empty? %>
-                <ol>
-                    <% @new_ads.each do |ad| %>
-                        <li>
-                            <% if ad.nil? %>
-                                Annonsen finnes ikke eller er ikke offentlig!
-                            <% else %>
-                                <%= link_to ad.title, ad_path(ad) %>
-                            <% end %>
-                        </li>
-                    <% end %>
-                </ol>
+                <%= render partial: 'frontpage_ad_list',
+                           locals: { ids: @new_ad_ids, ads: @new_ads} %>
 
                 <%= form_tag save_frontpage_ads_path, method: :post do %>
                     <%= hidden_field_tag :ad_ids, @new_ad_ids.join(',') %>
                     <%= submit_tag 'Save', class: 'button button-primary', disabled: !@new_ads_ok %>
                 <% end %>
+
                 <% unless @new_ads_ok %>
                     <p>At least 6 published ads are required</p>
                 <% end %>
