--- a/app/views/backstage/frontpage_ads.html.erb
+++ b/app/views/backstage/frontpage_ads.html.erb
@@ -34,6 +34,11 @@
                     <p>At least 6 published ads are required</p>
                 <% end %>
             <% end %>
+
+            <br>
+            
+            <%= link_to 'Back to backstage', backstage_path %>
+
         </div>
     </div>
 </div>
