Improve preauth and payin for bookings:
- it should be much more stable/work in a more predictable manner now.
- print reasons for payment failure from mangopay to user.
- remove booking_process_preauth_job as it was no longer used.
- general UI tweaks/improvements.
- change in booking flow, using secure3d when needed (values over 500 nok), and handling callbacks
- simplify code, so its more understandable

--- a/app/views/bookings/_booking_status_box.html.erb
+++ b/app/views/bookings/_booking_status_box.html.erb
@@ -1,6 +1,6 @@
 <div class="help-box">
     <% if @booking.created? %>
-        Venter på svar 
+        Venter på svar
     <% elsif @booking.payment_preauthorized? %>
         Venter på svar
     <% elsif @booking.confirmed? %>
@@ -25,8 +25,24 @@
         Leieforholdet er over
     <% elsif @booking.archived? %>
         Arkivert
-    <% elsif @booking.payment_preauthorization_failed? || @booking.payment_failed? %>
+    <% elsif @booking.payment_preauthorization_failed? %>
         Betaling mislyktes, prøv et annet kort
+
+        <% fte = @booking.financial_transactions.preauth.errored
+          if fte.any? %>
+          <br> TRANSLATEME: Grunnlag:
+          <!-- result_code: <%= fte.take.result_code %> -->
+          <%= fte.take.result_message %>
+        <% end %>
+    <% elsif @booking.payment_failed? %>
+        Betaling mislyktes, prøv et annet kort
+
+        <% fte = @booking.financial_transactions.payin.errored
+          if fte.any? %>
+          <br> TRANSLATEME: Grunnlag:
+          <!-- result_code: <%= fte.take.result_code %> -->
+          <%= fte.take.result_message %>
+        <% end %>
     <% elsif @booking.admin_paused? %>
         Under behandling
     <% else %>
