--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -67,7 +67,7 @@
                         </div>
                         <div class="booking-price-summary__row">
                             <span class="booking-price-summary__label">
-                                Totalt:
+                                Totalt for leieperiode:
                             </span>
                             <span class="booking-price-summary__value">?</span>
                         </div>
@@ -76,6 +76,12 @@
                                 Depositum:
                             </span>
                             <span class="booking-price-summary__value">?</span>
+                        </div>
+                        <div class="booking-price-summary__row">
+                            <span class="booking-price-summary__label">
+                                Totalt å betale:
+                            </span>
+                            <span class="booking-price-summary__value"><strong>?</strong> </span>
                         </div>
                      </div>
                  </div>
