--- a/app/views/ads/_search_filter_section.html.erb
+++ b/app/views/ads/_search_filter_section.html.erb
@@ -1,5 +1,7 @@
 <div class="search-filter-section">
-    <details class="search-filter-section__details" <%= 'open' if open %> >
+    <details class="search-filter-section__details"
+             data-controller="emptySearchExpander"
+             <%= 'open' if open %> >
         <summary class="search-filter-section__summary"><span class="button search-filter-section__expando">filter</span></summary>
         <div data-controller="searchFilterSelection" class="search-filter-section__inputs">
             <%= form_tag({}, class: "search-filter-section__form") do %>
