Hooked up blackouts on booing request calendar

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -26,6 +26,8 @@
 
     <div class="row">
         <div data-controller="kalendaeBookingSelector">
+            <%= render partial: 'ads/unavailability', locals: {ad: @booking.ad} %>
+
             <div class="eight columns">
                 <div class="booking-period-selector">
                     <div data-kalendae-container class="u-center"></div>
