--- a/app/views/bookings/_booking_feedback.html.erb
+++ b/app/views/bookings/_booking_feedback.html.erb
@@ -8,8 +8,8 @@
                 for andre Plendit-brukere. Det er frivillig å gi tilbakemelding.
             </p>
 
-            <p>
-                Tilbakemeldingen låses etter en uke.
+            <p> TRANSLATEME:
+                Tilbakemeldingen låses en uke etter booking var slutt.
             </p>
 
             <div data-controller="starRatingSelector" class="rating-selector booking-feedback__stars">
