Fixed prose on booking

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -70,7 +70,7 @@
                         </div>
                         <div class="booking-price-summary__row">
                             <span class="booking-price-summary__label">
-                                Totalt for leieperiode:
+                                Totalt leiepris:
                             </span>
                             <span class="booking-price-summary__value">?</span>
                         </div>
