--- a/app/views/accident_reports/_form.html.erb
+++ b/app/views/accident_reports/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
     <br>
     <div class="row">
-        <%= f.label :location_line, 'Hvor skjedds skaden?' %>
+        <%= f.label :location_line, 'Hvor skjedde skaden?' %>
         <%= f.text_field :location_line, class: 'u-full-width' %>
     </div>
     <br>
