Improved prose on accepted/rejected publish ad emails

--- a/app/views/application_mailer/ad_is_published.html.erb
+++ b/app/views/application_mailer/ad_is_published.html.erb
@@ -2,12 +2,14 @@
   Hei, <%= @user.public_name %>
 </p>
 <p>
-  Din annonse (<%= link_to ad.title, ad_url %>) på <%= link_to 'Plendit.no', root_url %> er nå godkjent og publisert.
+  Din annonse (<%= link_to ad.title, ad_url %>) 
+  på <%= link_to 'Plendit.no', root_url %> er nå godkjent og publisert.
 </p>
 
 <p>
   Et generelt tips:
 </p>
 <p>
-  Annonser med gode bilder har flere treff enn annonser uten. Du kan når som helst redigere din annonse og legge ut et ubegrenset antall bilder.
+  Annonser med gode bilder har flere treff enn annonser uten. Du kan når
+  som helst redigere din annonse og legge ut et ubegrenset antall bilder.
 </p>
