--- a/app/views/application_mailer/booking_cancelled__to_renter.html.erb
+++ b/app/views/application_mailer/booking_cancelled__to_renter.html.erb
@@ -3,7 +3,7 @@
 </p>
 
 <p>
-  <%= @booking.user.public_name %> har kansellert din forespørsel om å leie <%= @booking.ad.title %>.
+  Booking av "<%= @booking.ad.title %>" ble kansellert.
 </p>
 
 <p>
