--- a/app/views/bookings/_booking_feedback.html.erb
+++ b/app/views/bookings/_booking_feedback.html.erb
@@ -26,7 +26,7 @@
             </div>
 
             <div>
-                <button class="button button-primary">Gi tilbakemelding</button>
+                <%= f.submit 'Gi tilbakemelding', class: 'button button-primary'%>
             </div>
         <% end %>
     </div>
