Added note about insurance

--- a/app/views/application_mailer/booking_confirmed__to_renter.html.erb
+++ b/app/views/application_mailer/booking_confirmed__to_renter.html.erb
@@ -24,6 +24,10 @@
 </p>
 
 <p>
+  Forsikringsdokumenter ligger vedlagt.
+</p>
+
+<p>
   Leieforholdet kan avlyses til og med dagen før utleie starter.
   Isåfall vil leiesum og depositum refunderes i sin helhet.
 </p>
