Added mail for notification about deposit payment

--- a/app/views/bookings/_booking_deposit.html.erb
+++ b/app/views/bookings/_booking_deposit.html.erb
@@ -1,14 +1,16 @@
 <%= render layout: 'gray_box', locals: {title: 'Penger til utleier'} do %>
     <div class="booking-summary">
         <div class="booking-summary__row">
-            Her legger du inn penger du skylder for bompenger, drivstoff og eventuelle bøter.
+            Her legger du inn penger du skylder for bompenger, drivstoff og
+            eventuelle bøter.
         </div>
         <div class="booking-summary__row">
             <%= form_for(@booking) do |f| %>
                 <% if @booking.errors.any? %>
                     <div id="error_explanation">
                         <h2>
-                            <%= @booking.errors.count %> feil forhindret at du fikk lagret ønsket depositums beløp:
+                            <%= @booking.errors.count %> feil forhindret at
+                            du fikk lagret ønsket depositumbeløp:
                         </h2>
                         <ul>
                             <% @booking.errors.each do |attribute,message| %>
