--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -113,9 +113,14 @@
         </div>
 
         <div class="help-box">
-            Om du har dekning på kredittkortet ditt, sendes forespørselen
-            til utleieren. Du blir kun belastet om din forespørsel blir
-            godkjent av utleier. Du vil få pengene tilbake dersom leifoholdet blir avslått, abrutt eller avlyst.
+            Når forespørselen sendes vil du komme videre til betalingssiden.
+
+            Du blir kun belastet om forespørselen blir akseptert.
+
+            Ved aksept vil kortet belastes; hele summen refunderes hvis
+            forespørselen avvises, eller hvis du velger å avlyse
+            leieforholdet. Du kan avlyse til og med dagen før leieforholdet
+            starter.
         </div>
 
         <div class="row">
