Prose about payment on booking page

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -117,7 +117,7 @@
 
             Du blir kun belastet om forespørselen blir akseptert.
 
-            Ved aksept vil kortet belastes; hele summen refunderes hvis
+            Ved aksept vil kortet belastes men hele summen refunderes hvis
             forespørselen avvises, eller hvis du velger å avlyse
             leieforholdet. Du kan avlyse til og med dagen før leieforholdet
             starter.
