prettify accident_report form

--- a/app/views/accident_reports/_form.html.erb
+++ b/app/views/accident_reports/_form.html.erb
@@ -12,10 +12,10 @@
 
     <p>
         Du er i ferd med å sende inn en skaldemelding på
-        <%= link_to "\"#{@booking.ad.display_title}\"", @booking.ad %>.
+        <%= link_to @booking.ad.display_title, @booking.ad %>.
     </p>
     <p>
-        <%= link_to 'Tilbake til bookingen.', @booking %>.
+        <%= link_to 'Tilbake til bookingen', @booking %>.
     </p>
 
     <div class="row">
