--- a/app/views/ads/_secondary_prices.html.erb
+++ b/app/views/ads/_secondary_prices.html.erb
@@ -16,8 +16,12 @@
         </div>
 
         <div class="main-price__row">
-            <i>Inkluderer forsikring opp til</i>
-            <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+            <% if @ad.bap? %>
+                <i>Inkluderer forsikring opp til</i>
+                <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %></i>
+            <% else %>
+                <i>Inkluderer forsikring</i>
+            <% end %>
         </div>
 
         <div class="main-price__row">
