Added opengraph metadata for non-ad pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,11 @@
             title: 'Plendit',
             description: 'Lei det du trenger, lei ut det du har!',
             og: {
-                site_name: 'Plendit',
-                type:      'website'
+                site_name:        'Plendit',
+                type:             'website',
+                image:            image_url('plendit.no.png'),
+                'image:width'  => '940',
+                'image:height' => '492'
             }
         )
     %>
