--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -49,7 +49,7 @@
             <%= render partial: 'ad_copy_section',     locals: { ad: @ad } %>
             <%# todo: remove this partial if we decide to go for new gallery ui %>
             <%#= render partial: 'ad_gallery_mosaic',   locals: { ad: @ad } %>
-            <%= render partial: 'ad_feedback_list_section', locals: { ad: @ad } %>
+            <%#= render partial: 'ad_feedback_list_section', locals: { ad: @ad } %>
         </div>
         <div class="four columns">
             <div class="u-not-on-bigscreen u-push-down">
