bugfix, comma was forgotten

--- a/app/views/application_mailer/deposit_withdrawals__to_owner.html.erb
+++ b/app/views/application_mailer/deposit_withdrawals__to_owner.html.erb
@@ -12,8 +12,8 @@
 </p>
 
 <p>
-    Hvis du mener denne summen ikke dekker kostnadene, må du 
-    <%= link_to 'kontakte kundesenteret.' Plendit::Application.config.x.customerservice.contact_form %>
+    Hvis du mener denne summen ikke dekker kostnadene, må du
+    <%= link_to 'kontakte kundesenteret.', Plendit::Application.config.x.customerservice.contact_form %>
 </p>
 
 <p>
