Added parital for showing payment failure info. Needs styling, is just gray box now

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,6 +5,10 @@
         <%= render partial: 'booking_heading_box', locals: { ad: @booking.ad, user: @booking.ad.user } %>
     </div>
 
+    <% if @booking.payment_preauthorization_failed? %>
+        <%= render partial: 'payment_failure_reason' %>
+    <% end %>
+
     <% if @booking.may_give_feedback? %>
         <div class="u-push-down">
             <%# FIXME: TODO runeh cond around has_provided_feedback %>
