small textchange in rating

--- a/app/views/bookings/_booking_feedback.html.erb
+++ b/app/views/bookings/_booking_feedback.html.erb
@@ -5,7 +5,7 @@
 
             <p>
                 Hvor god var din opplevelse? Din tilbakemelding blir synlig
-                for andre Plendit-brukere. Det er frivillig å gi tilbakemelding.
+                for andre Plendit-brukere. Det er frivillig å gi skriftlig tilbakemelding.
             </p>
 
             <div data-controller="starRatingSelector" class="rating-selector booking-feedback__stars">
